[gd_scene load_steps=5 format=2]

[ext_resource path="res://bullets/Bomb.gd" type="Script" id=1]
[ext_resource path="res://animation/explosion.tres" type="SpriteFrames" id=2]
[ext_resource path="res://assets/actors/bomb.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[node name="Bomb" type="Area2D"]
collision_layer = 8
collision_mask = 38
script = ExtResource( 1 )
damage = 50

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Explosion" type="AnimatedSprite" parent="."]
visible = false
frames = ExtResource( 2 )
frame = 1
speed_scale = 2.0

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Bomb_body_entered"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
